<!--
  ~ SPDX-License-Identifier: GPL-3.0-only
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">PieAce</string>
    <string name="steps" translatable="false">steps</string>
    <string name="meters_today" translatable="false">%.2f km</string>
    <plurals name="steps_text">
        <item quantity="one">%d step</item>
        <item quantity="other">%d steps</item>
    </plurals>
    <string name="history">History</string>
    <string name="steps_day_display">On %tD you walked about %.2f km with %d steps.</string>
    <string name="no_entry">No record for %tD.</string>
    <string name="week_display_format">Week %d: %tD - %tD</string>
    <string name="steps_month">Steps this month</string>
    <string name="avg_distance">Average distance per day</string>
    <string name="overall_distance">Overall distance</string>
    <string name="steps_format">%.2f km or %d steps</string>
    <string name="new_activity">New Activity</string>
    <string name="new_activity_started">Started new activity</string>
    <string name="backgroundimageofwelcome" tools:ignore="MissingTranslation">backgroundImage</string>
    <string name="logo" tools:ignore="MissingTranslation">logo</string>
    <string name="a_path_towards_a_better_future" translatable="false">A Path towards a Better Future</string>
    <string name="get_started" tools:ignore="MissingTranslation">GET STARTED</string>
    <string name="to_keep_the_body_in_good_health_is_a_duty_otherwise_we_shall_not_be_able_to_keep_our_mind_strong_and_clear" tools:ignore="MissingTranslation">..To keep the body in good health is a duty... otherwise we shall not be able to keep our mind strong and clear..</string>
    <string name="todo" tools:ignore="MissingTranslation">todoo</string>
    <string name="objective" translatable="false">OBJECTIVE</string>
    <string name="this_project_started_as_an_idea_for_our_design_engineering_project_the_main_concept_which_fascinated_us_was_the_new_idea_by_which_we_can_change_the_future_and_will_be_able_to_make_life_of_people_around_healthy" translatable="false">This project started as an idea for our Design Engineering project . The main concept which fascinated us was the new idea by which we can change the future and will be able to make life of people around Healthy.</string>
    <string name="what_inspired_us" translatable="false">What Inspired Us ?</string>
    <string name="textview" translatable="false">This idea of ours is actually the piezoelectric flooring along with a idea of an
"app" that we created which was inspired from "Runtastic"(A running app which
calculate and Pokémon Go (which was a new concept of gaming)"
Imagine a flooring system that creates electricity and an app with stores the
data you walked on that floor like number of steps and the units of electric current
we created .

As I said earlier . Dots of ideas connected together helped us to build this Idea.Piezoelectric flooring was already invented, but we are approaching this whole system of innovation as a contributor point of View</string>
    <string name="NEXT" tools:ignore="MissingTranslation">NEXT</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="sign_up" translatable="false">Sign-Up</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an Account?</string>
    <string name="registration" translatable="false">REGISTRATION</string>
    <string name="name" translatable="false">Name</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="height_in_cm" translatable="false">Height in cm</string>
    <string name="weight_in_lbs" translatable="false">Weight in lbs</string>
    <string name="email" translatable="false">Email</string>
    <string name="next" tools:ignore="MissingTranslation">NEXT</string>
</resources>
